# cochlea

./: .gitignore  INSTALL.rst  MANIFEST.in  make_env.sh  original_setup.py  pyproject.toml  requirements.txt
cochlea/zilany2014/: __init__.py  zilany2014_rate.py
